src/main/resources/scss/forums/components/_forums.scss
a.blockLink {
	display: block;
}

.comment-form-heading {
	font-size: .75rem;
	padding: 1rem 0;
}

$indent: 0.9375rem;

.page-controls {
	@include block-grid(3);
	position: relative;
	font-size:.875rem;
	.item {
		padding: .5rem 1.4rem; // the horizontal padding makes room for the arrows.	
	}
	.previous {
		 .link {
			&::before {
				@include arrow(left);	
			} 	
		 }
	}
	.current {
		text-align: center;
		color: $tertiary-grey;
	}
	.next {
		text-align: right;
		.link {
			&::after {
				@include arrow(right);	
			}
		}
	}
}

.forums-wrapper {
	@include grid-column(12);
	padding-bottom:1rem;

	.view-header {
		font-size: 1rem;
		text-transform: uppercase;
		font-weight: bold;
		vertical-align: middle;
		background: lightgray;
		// background: linear-gradient(to bottom, #aaa, lightgray 5px);
		padding: 0.5rem 1rem;
		color: white;
		display: block;
		margin: 0 -#{$indent};
	}

	.breadcrumbs,
	.icon-bar {
		margin-left: -$indent;
		margin-right: -$indent;
		width: auto;
		border-radius: 0;
	}
	.breadcrumbs {border-width: 1px 0;}

	.comment-form {
		input {
			font-size: 1rem;
			color: $body-font-color;
			border: 1px solid black;
			padding: .6rem;
			width: 100%;
			margin-bottom: 1rem;
			border-radius: 0;
		}
	}

	.fi-flag {
		&.flagged {
			color: $primary-red;
		}
	}

	ul {
		list-style-type: none;
		margin: 0;
	}

	ul.action-links {
		& > li {
			@extend %detail-link;
			display: inline-block;
			margin-right: 1rem;
		}
	}

	.action-link {
		@extend %detail-link;
		padding: 0.5rem 0;
		display: inline-block;
		&.create-topic {
			position: relative;
			display: block;
			text-align: right;
			padding: 0.5rem 0;
			padding-right: 0;
		}
	}

	.postitem {
		@extend %attributed-content-item;
		padding-left: 0;
		padding-right: 0;

		.threadlink {
			text-align: right;
			position: absolute;
			display: block;
			min-height: 1rem;
			padding: 1.5rem;
			top: 0;
			right: 0;
			left: 0;
			border-top: 1px dotted lightgray;
			font-size: .75rem;
			color: $tertiary-gray;
		}

		.replies {
			border-left: 4px solid $panel-border-color;
		}

		&.deleted {
			font-size: .6875rem;
			color: $tertiary-grey;
			& > .modeled-content {
				text-transform: uppercase;
			}
			padding: .25rem;
		}
	}

	.deleteditemgroup {
		font-size: .75rem;
		color: $tertiary-grey;
		padding: 1rem 0;
		margin-left: 45px; // avatar size + 10px defined in _attributed-content-item;
	}

	section {
		margin-top:1rem;
		h1 {
			font-size: .6875rem;
			text-transform: uppercase;
			font-family: $body-font-family;
		}
		&.recent-activity {
			.forum-topics {
				background: $quad-grey;
			}
			.count {
				@include count-badge();
			}
		}
	}

	.forum-list {
		.forum-item {
			padding-left: $indent;	
		}
	}

	%group-heading {
		margin-left: -$indent;
		margin-right: -$indent;

		& > h3 {
			// padding: 0 10px 0 20px;
			padding-left: $indent;
			padding-right: $indent;
			line-height: 2.3;
			font-size: 0.6em;
			background: #fafafa !important;
			font-weight: 600;
			box-shadow: inset 0 1px 0 0 #efefef, inset 0 -1px 0 0 #efefef;
			color: #757474;
			text-transform: uppercase;
			font-family: 'Open Sans';
			margin: 0;
		}
	}

	nav.forum {
		.bin {
			border-bottom: 4px solid $quad-grey;
			margin-bottom: 2rem;
			h2 {
				font-size: 1rem;
				font-weight: 600;
				color: $primary-color;
				margin-top: 1rem;
			}
		}
		.group-heading {
			@extend %group-heading;
		}
		.board {
			@extend %group-heading;
		}
		.forum-li {
			padding: .625rem 0;
			border-bottom: 1px dotted $panel-border-color;
			&:last-child {
				border-bottom: none;
			}
			h3 {
				// text-transform: uppercase;
				// font-size: 1rem;
				// font-weight: bold;
				margin-bottom: 0;
				position: relative;
			}
		}

		li {
			.title {
				display: block;
				font-size: 1rem;
				color: $body-font-color;
				font-family: $header-font-family;
				font-weight: 600;
			}
		}

		.meta, .activity {
			font-size: .75rem;
			display: block;
			color: $tertiary-grey;
			padding: .5rem 0;
			font-family: 'Open Sans';
			font-weight: 600;
		}

		ul.forum-topics {
			border-top:1px solid $panel-border-color;
			margin-left: -$indent;
			margin-right: -$indent;
			li {
				@extend %attributed-content-item;
				padding:0 0 0 $indent;
				border:1px solid transparent;
				border-bottom-color: $panel-border-color;

				.wrap {
					margin-right: 20px;
				}

				.attribution {
					font-size: .75rem;
					line-height: 1rem;
					font-weight: 600;
				}
				a {
					display: block;
					padding: .5rem 0;
					.title {
						display: inline-block;
						max-width: 99%; // leave room for the arrow
						line-height: 1.25rem;
					}
					.activity {
						font-size: .75rem;
						padding: 0;
						margin: 0;
						line-height: 1rem;
						.username {
							margin-right:.25em;
						}
						.replies-wrapper, .likes {
							display: inline;
							margin-right:.5rem;
						}
					}
				}
			}
		}
	}

	.nav-up {
		@include grid-row();
		a {
			display:block;
			padding: $panel-padding;
			position: relative;
			background: gray;
		}
	}
}

.topic-link {
	.arrow-right {
		font-size: 1.375rem;
	}
}

.forum-board-groups {
	list-style-type: none;
	margin: 0 1em;
	background: antiquewhite;
}

.board-title {
	text-transform: uppercase;
}

.forum-boards {
	ul li {
		background: white;
	}
}

.forum-board-group {
	@include grid-row();
	margin-top: $panel-margin-bottom;
}

